k8s/overlays/staging/custom-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eve-warehouse-api-v1
spec:
  template:
    spec:
      containers:
        - name: eve-warehouse-api
